# inertia-axum

./: Cargo.toml  LICENSE  README.md
examples/svelte/: Cargo.toml  index.html
examples/svelte/client/: package-lock.json  package.json
examples/svelte/client/src/: main.js
examples/svelte/client/src/pages/: counter.svelte  index.svelte
examples/svelte/src/: main.rs
src/: assets_version.rs  config.rs  lib.rs  page.rs  renderer.rs  shared_state.rs
