[package]
name = "inertia-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tower = { workspace = true }
futures-util = { workspace = true }

[workspace.dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
serde = "1.0.203"
serde_json = "1.0.117"
tower = "0.4.13"
futures-util = "0.3.30"

[workspace]
members = ["examples/*"]
